--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
         <section id="jurusan">
             <h2>Jurusan</h2>
             <ul>
-                <li><a href="/teknik-komputer-jaringan">Teknik Komputer Jaringan</a></li>
-                <li><a href="/multimedia">Multimedia</a></li>
-                 <p><a href="/pendaftaran">Klik di sini untuk mendaftar ke sekolah</a></p>
+               <ul>
+    <li><a href="teknik-komputer-jaringan.html">Teknik Komputer Jaringan</a></li>
+    <li><a href="multimedia.html">Multimedia</a></li>
+    <li><a href="pendaftaran.html">Pendaftaran</a></li>
+</ul>
+
             </ul>
         </section>
 
