--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
         <section id="jurusan">
             <h2>Jurusan</h2>
             <ul>
-               <ul>
-    <li><a href="teknik-komputer-jaringan.html">Teknik Komputer Jaringan</a></li>
-    <li><a href="multimedia.html">Multimedia</a></li>
-    <li><a href="pendaftaran.html">Pendaftaran</a></li>
+           
+   <ul>
+    <li><a href="/sditkita/teknik-komputer-jaringan.html">Teknik Komputer Jaringan</a></li>
+    <li><a href="/sditkita/multimedia.html">Multimedia</a></li>
+    <li><a href="/sditkita/pendaftaran.html">Pendaftaran</a></li>
 </ul>
+
+
 
             </ul>
         </section>
